# ros2_turtlebot2

./: CLAUDE.md  README.md  UPGRADE_PLAN.md  docker-compose.jetson.yml  docker-compose.yml
docker/: Dockerfile  Dockerfile.dev  ros_entrypoint.sh
scripts/: build_workspace.sh  clone_dependencies.sh  run.sh  save_map.sh  setup_jetson.sh
src/turtlebot2_bringup/: CMakeLists.txt  package.xml
src/turtlebot2_bringup/config/: astra.yaml  kobuki.yaml  nav2_params.yaml  slam_params.yaml  xtion.yaml
src/turtlebot2_bringup/config/rviz/: turtlebot2.rviz
src/turtlebot2_bringup/launch/: astra.launch.py  desktop.launch.py  kobuki.launch.py  nav2.launch.py  slam.launch.py  turtlebot2.launch.py
src/turtlebot2_description/: CMakeLists.txt  package.xml
src/turtlebot2_description/launch/: robot_state_publisher.launch.py
src/turtlebot2_description/urdf/: common_properties.urdf.xacro  kobuki.urdf.xacro  turtlebot2.urdf  turtlebot2.urdf.xacro
src/turtlebot2_description/urdf/sensors/: astra.urdf.xacro  xtion.urdf.xacro
